--- a/style.css
+++ b/style.css
@@ -7,18 +7,21 @@ body{
     color: black;
     display: flex;
     flex-wrap: wrap;
+    background-color: rgb(135, 35, 65);
 }
 
-header{
-    color: white;
+header, nav, footer {
+    width: 100%;
     background-color: rgb(9, 18, 44);
-    width: 100%;
+    color: white;
+    text-align: center;
+    padding: 0.5em 0;
 }
 
-nav{
+nav a {
     color: white;
-    background-color:rgb(9, 18, 44);
-    width: 100%;
+    text-decoration: none;
+    margin: 0 10px;
 }
 
 main{
@@ -26,8 +29,16 @@ main{
     width: 80%;
 }
 
-main article{
-    background-color: rgb(159, 44, 60);
+main section{
+    background-color: rgb(135, 35, 65);
+    margin: 10px;
+}
+
+main img {
+    width: 98%;
+    height: auto;
+    margin: 10px;
+    border-radius: 8px;
 }
 
 aside{
@@ -35,7 +46,9 @@ aside{
     background-color: rgb(190, 49, 68);
 }
 
-footer{
+footer {
     background-color: rgb(225, 117, 100);
-    width: 100%; 
+    padding: 1em 0;
+    margin-top: 2em;
 }
+
